--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -4,7 +4,7 @@
 
 {% block bootstrap3_content %}
 	{% include 'core/includes/_menu_principal.html' %}
-    <div class="container">
+    <div class="container" style="margin-bottom: 50px;">
         <h1>{% block title %}(no title){% endblock %}</h1>
 
         {% autoescape off %}{% bootstrap_messages %}{% endautoescape %}
