--- a/core/templates/core/includes/_menu_principal.html
+++ b/core/templates/core/includes/_menu_principal.html
@@ -1,7 +1,7 @@
 {% load bootstrap3 %}
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
+    
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -12,13 +12,13 @@
       <a class="navbar-brand" href="{% url 'home' %}">{% bootstrap_icon 'usd' %}</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
+   
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class=""><a href="{% url 'home' %}"> {% bootstrap_icon 'home' %} Home <span class="sr-only">(current)</span></a></li>
         <li><a href="{% url 'conta_list'%}">{% bootstrap_icon 'wallet' %} Contas</a></li>
         <li><a href="{% url 'categoria_list' %}">Categorias de lançamentos</a></li>
-        <li><a href="{% url 'conta_create' %}">Lançamentos</a></li>
+        <li><a href="{% url 'lancamento_list' %}">Lançamentos</a></li>
         <li><a href="{% url 'usuario_list' %}">{% bootstrap_icon 'user' %} Usuários</a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -35,11 +35,17 @@
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
+       
+        <li><a>Bem vindo(a). {{user}}</a></li>
+     
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Alterar senha</a></li>
             <li><a href="{% url 'logout' %}?next=/">Sair</a></li>
+       
+            
+          
           </ul>
         </li>
       </ul>
