--- a/lancamento/templates/lancamento/lancamento_form.html
+++ b/lancamento/templates/lancamento/lancamento_form.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block title %}
-	{% bootstrap_icon 'folder-open' %} Cadastro de lançamentos
+	{% bootstrap_icon 'folder-open' %} Cadastro de dispesas
 {% endblock %}
 
 {% block content %}
