--- a/categoria/templates/categoria/categoria_list.html
+++ b/categoria/templates/categoria/categoria_list.html
@@ -2,10 +2,11 @@
 {% load bootstrap3 %}
 
 {% block title %}
-	{% bootstrap_icon 'user' %} Categorias
+	Categorias
 {% endblock %}
 
 {% block content %}
+<h1>{% bootstrap_icon 'user' %} Categorias</h1>
 	<div class="panel panel-default">
 	  <div class="panel-body">
 	    <a href="{% url 'categoria_create' %}" class="btn btn-md btn-primary">{% bootstrap_icon 'floppy-disk' %} Cadastrar categoria</a>
@@ -14,15 +15,16 @@
 	<table class="table table-hover">
   		<thead>
   			<th>Descriçao</th>
-  			<th>Tipo</th>
+  			
   			<th>Situação</th>
   			<th class="text-center">Editar</th>
+			<th class="text-center">Excluir</th>
   		</thead>
   		<tbody>
   			{% for categoria in object_list %}
 				<tr>
 					<td>{{ categoria.descricao }}</td>
-					<td>{{ categoria.get_tipo_display }}</td>
+					
 					<td>
 						{% if categoria.is_active %}
 							Ativa 
@@ -35,6 +37,9 @@
 					<td class="text-center">
 				          {% bootstrap_button content='' href=categoria.get_absolute_url button_type='link' icon='edit' button_class='btn btn-primary' size='sm' %}
 				    </td>
+					<td class="text-center">
+						{% bootstrap_button content='' href=categoria.get_delete_url button_type='link' icon='trash' button_class='btn btn-danger' size='sm' %}
+				  </td>
 				</tr>
 			{% endfor %}
   		</tbody>
