--- a/conta/templates/conta/conta_list.html
+++ b/conta/templates/conta/conta_list.html
@@ -1,11 +1,12 @@
 {% extends 'core/base.html' %}
 {% load bootstrap3 %}
-
+	
 {% block title %}
-	{% bootstrap_icon 'folder-open' %} Contas
+Contas
 {% endblock %}
 
 {% block content %}
+<h1>{% bootstrap_icon 'folder-open' %} Contas</h1>
 	<div class="panel panel-default">
 	  <div class="panel-body">
 	    <a href="{% url 'conta_create' %}" class="btn btn-md btn-primary">{% bootstrap_icon 'floppy-disk' %} Cadastrar conta</a>
@@ -13,17 +14,21 @@
 	</div>
 	<table class="table table-hover">
   		<thead>
-  			<th>Descriçao</th>
+  			<th>Contas</th>
   			<th>Saldo</th>
   			<th class="text-center">Editar</th>
+			<th class="text-center">Excluir</th>
   		</thead>
   		<tbody>
   			{% for conta in object_list %}
 				<tr>
 					<td>{{ conta.descricao }}</td>
-					<td>R$ {{ conta.saldo|floatformat:2 }}</td>
+					<td>R$ {{ conta.saldo|floatformat:2}}</td>
 					<td class="text-center">
 				          {% bootstrap_button content='' href=conta.get_absolute_url button_type='link' icon='edit' button_class='btn btn-primary' size='sm' %}
+				    </td>
+					  <td class="text-center">
+				          {% bootstrap_button content='' href=conta.get_delete_url button_type='link' icon='trash' button_class='btn btn-danger' size='sm' %}
 				    </td>
 				</tr>
 			{% endfor %}
