--- a/lancamento/templates/lancamento/lancamento_list.html
+++ b/lancamento/templates/lancamento/lancamento_list.html
@@ -2,18 +2,18 @@
 {% load bootstrap3 %}
 
 {% block title %}
-	{% bootstrap_icon 'user' %} Lançamentos
+	{% bootstrap_icon 'user' %} Dispesas
 {% endblock %}
 
 {% block content %}
 	<div class="panel panel-default">
 	  <div class="panel-body">
-	    <a href="{% url 'lancamento_create' %}" class="btn btn-md btn-primary">{% bootstrap_icon 'floppy-disk' %} Cadastrar lançamentos</a>
+	    <a href="{% url 'lancamento_create' %}" class="btn btn-md btn-primary">{% bootstrap_icon 'floppy-disk' %} Cadastrar dispesas</a>
 	  </div>
 	</div>
 	<table class="table table-hover">
   		<thead>
-  			<th>Lançamentos</th>
+  			<th>Dispesa</th>
   			<th>Valor</th>
 			  <th>Data</th>
   			
@@ -21,14 +21,16 @@
 			<th class="text-center">Excluir</th>
   		</thead>
   		<tbody>
-  			{% for lancamento in object_list %}
+			
+  			{% for dispesa in object_list %}
 				<tr>
-					<td>{{ lancamento.lancamento }}</td>
-					<td>{{ lancamento.valor }}</td>
-					<td>{{ lancamento.data }}</td>
+					<td>{{ dispesa.dispesa }}</td>
+					<td>{{ dispesa.valor }}</td>
+					<td>{{ dispesa.data }}</td>
+					
 					
 					<td class="text-center">
-				          {% bootstrap_button content='' href=lancamento.get_absolute_url button_type='link' icon='edit' button_class='btn btn-primary' size='sm' %}
+				          {% bootstrap_button content='' href=dispesa.get_absolute_url button_type='link' icon='edit' button_class='btn btn-primary' size='sm' %}
 				    </td>
 					<td class="text-center">
 						{% bootstrap_button content='' href=lancamento.get_delete_url button_type='link' icon='trash' button_class='btn btn-danger' size='sm' %}
