--- a/usuario/templates/usuario/usuario_list.html
+++ b/usuario/templates/usuario/usuario_list.html
@@ -2,13 +2,13 @@
 {% load bootstrap3 %}
 
 {% block title %}
-	{% bootstrap_icon 'user' %} Usuários
+	{% bootstrap_icon 'user' %} Usuário
 {% endblock %}
 
 {% block content %}
 	<div class="panel panel-default">
 	  <div class="panel-body">
-	    <a href="{% url 'usuario_create' %}" class="btn btn-md btn-primary">{% bootstrap_icon 'floppy-disk' %} Cadastrar usuário</a>
+	    <p class="btn btn-md btn-primary">Você pode editar seus dados pessoais logo abaixo!</p>
 	  </div>
 	</div>
 	<table class="table table-hover">
@@ -18,7 +18,7 @@
   			<th>E-mail</th>
   			<th>Último acesso</th>
   			<th class="text-center">Editar</th>
-  			<th class="text-center">Excluir</th>
+  			<!--<th class="text-center">Excluir</th>-->
   		</thead>
   		<tbody>
   			{% for usuario in object_list %}
@@ -30,9 +30,9 @@
 					<td class="text-center">
 				          {% bootstrap_button content='' href=usuario.get_absolute_url button_type='link' icon='edit' button_class='btn btn-primary' size='sm' %}
 				    </td>
-				    <td class="text-center">
+				   <!--- <td class="text-center">
 				          {% bootstrap_button content='' href=usuario.get_delete_url button_type='link' icon='trash' button_class='btn btn-danger' size='sm' %}
-				    </td>
+				    </td>-->
 				</tr>
 			{% endfor %}
   		</tbody>
