--- a/categoria/templates/categoria/categoria_confirm_delete.html
+++ b/categoria/templates/categoria/categoria_confirm_delete.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+<h1>{% bootstrap_icon 'trash' %} Excluir</h1>
 <form action="" method="post">
   {% csrf_token %}
   <p>Você tem certeza que deseja excluir "{{ object.descricao }}"?</p>
