--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,15 +1,13 @@
 {% extends 'core/base.html' %}
 {% load bootstrap3 %}
 
-{% block title %}Título{% endblock %}
+{% block title %}Início{% endblock %}
 
 {% block content %}
-Teste asdfasdf
 
-{% if user.is_authenticated %}
-	Voce esta autenticado
-{% endif %}
 
+
+ 
 {% bootstrap_icon "time" %}
 {% bootstrap_alert "Parabéns" alert_type='success' %}
 {% endblock %}
