--- a/core/templates/core/includes/_menu_principal.html
+++ b/core/templates/core/includes/_menu_principal.html
@@ -17,8 +17,9 @@
       <ul class="nav navbar-nav">
         <li class=""><a href="{% url 'home' %}"> {% bootstrap_icon 'home' %} Home <span class="sr-only">(current)</span></a></li>
         <li><a href="{% url 'conta_list'%}">{% bootstrap_icon 'wallet' %} Contas</a></li>
-        <li><a href="{% url 'categoria_list' %}">Categorias de lançamentos</a></li>
-        <li><a href="{% url 'lancamento_list' %}">Dispesas</a></li>
+        <li><a href="{% url 'categoria_list' %}">Categorias</a></li>
+        <li><a href="{% url 'lancamento_list' %}">Despesas</a></li>
+        <li><a href="{% url 'lucro_list' %}">Lucros</a></li>
         <li><a href="{% url 'usuario_list' %}">{% bootstrap_icon 'user' %} Usuário</a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
