--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -6,10 +6,12 @@
 {% block title %}Sistema financeiro pessoal / Login{% endblock %}
 
 {% block content %}
+
     <p></p>
+    
     <div class="row">
         <div class="col-sm-6 col-md-4 col-md-offset-4">
-            <h1 class="text-center login-title"><span class="glyphicon glyphicon-usd" style="font-size:100px;"></span></h1>
+            <h1 class="text-center login-title"><span class="glyphicon glyphicon-usd" style="font-size:100px; margin-top: 20px;"></span></h1>
             <center>
               <h3>Sistema financeiro pessoal</h3>
               <br><br>
@@ -28,5 +30,5 @@
             </div>
         </div>
     </div>
-
+  
 {% endblock %}
