--- a/lancamento/templates/lancamento/lancamento_form.html
+++ b/lancamento/templates/lancamento/lancamento_form.html
@@ -5,15 +5,18 @@
 {% endblock %}
 
 {% block title %}
-	{% bootstrap_icon 'folder-open' %} Cadastro de dispesas
+Cadastro de lucros
 {% endblock %}
 
 {% block content %}
+<h1>{% bootstrap_icon 'glyphicon glyphicon-usd' %}Cadastro de lucros</h1>
 <form class="form" role="form" method="POST">
   {% csrf_token %}
   {{ form.non_field_errors }}
   {% bootstrap_form form %}
-  {% buttons submit='Gravar' %}
+  <p>Verifique se todos os dados estão corretos, você não poderá mais editar.</p>
+  {% buttons submit='Confirmar' %}
+
     <a href="javascript:history.go(-1);" class="btn btn-info" role="button">Voltar</a>
   {% endbuttons %}
 </form>
