--- a/usuario/templates/usuario/usuario_form.html
+++ b/usuario/templates/usuario/usuario_form.html
@@ -5,10 +5,11 @@
 {% endblock %}
 
 {% block title %}
-	{% bootstrap_icon 'user' %} Cadastro de usuário
+	
 {% endblock %}
 
 {% block content %}
+<h1>{% bootstrap_icon 'user' %} Cadastro de usuário</h1>
 <form class="form" role="form" method="POST">
   {% csrf_token %}
   {{ form.non_field_errors }}
