--- a/usuario/templates/usuario/usuario_list.html
+++ b/usuario/templates/usuario/usuario_list.html
@@ -2,10 +2,11 @@
 {% load bootstrap3 %}
 
 {% block title %}
-	{% bootstrap_icon 'user' %} Usuário
+	Usuário
 {% endblock %}
 
 {% block content %}
+<h1>{% bootstrap_icon 'user' %} Usuário</h1>
 	<div class="panel panel-default">
 	  <div class="panel-body">
 	    <p class="btn btn-md btn-primary">Você pode editar seus dados pessoais logo abaixo!</p>
