--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% load bootstrap3 %}
 {% load static %}
 
-{% block title %}Sistema financeiro pessoal / Login{% endblock %}
+{% block title %}💸MoneyFlow / Login{% endblock %}
 
 {% block content %}
 
@@ -13,7 +13,7 @@
         <div class="col-sm-6 col-md-4 col-md-offset-4">
             <h1 class="text-center login-title"><span class="glyphicon glyphicon-usd" style="font-size:100px; margin-top: 20px;"></span></h1>
             <center>
-              <h3>Sistema financeiro pessoal</h3>
+              <h3>💸MoneyFlow</h3>
               <br><br>
             </center>
             <div class="account-wall">
