--- a/core/templates/core/includes/_menu_principal.html
+++ b/core/templates/core/includes/_menu_principal.html
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class=""><a href="{% url 'home' %}"> {% bootstrap_icon 'home' %} Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="{% url 'conta_list'%}">{% bootstrap_icon 'wallet' %} Contas</a></li>
+        <li><a href="{% url 'conta_list'%}">{% bootstrap_icon 'wallet' %} Saldo em Contas</a></li>
         <li><a href="{% url 'categoria_list' %}">Categorias</a></li>
         <li><a href="{% url 'lancamento_list' %}">Despesas</a></li>
         <li><a href="{% url 'lucro_list' %}">Lucros</a></li>
