--- a/categoria/templates/categoria/categoria_form.html
+++ b/categoria/templates/categoria/categoria_form.html
@@ -14,7 +14,7 @@ Cadastro de categoria
   {% csrf_token %}
   {{ form.non_field_errors }}
   {% bootstrap_form form %}
-  {% buttons submit='Gravar' %}
+  {% buttons submit='Salvar' %}
     <a href="javascript:history.go(-1);" class="btn btn-info" role="button">Voltar</a>
   {% endbuttons %}
 </form>
