--- a/core/templates/core/includes/_menu_principal.html
+++ b/core/templates/core/includes/_menu_principal.html
@@ -20,7 +20,11 @@
         <li><a href="{% url 'categoria_list' %}">Categorias</a></li>
         <li><a href="{% url 'lancamento_list' %}">Despesas</a></li>
         <li><a href="{% url 'lucro_list' %}">Lucros</a></li>
+        {%if user.tipo == "ADMINISTRADOR" %}
         <li><a href="{% url 'usuario_list' %}">{% bootstrap_icon 'user' %} Usuário</a></li>
+        {%else%}
+        <li><a href="{% url 'usuario_list' %}">{% bootstrap_icon 'user' %} Perfil</a></li>
+        {%endif%}
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
