--- a/usuario/templates/usuario/usuario_confirm_delete.html
+++ b/usuario/templates/usuario/usuario_confirm_delete.html
@@ -6,9 +6,10 @@
 {% endblock %}
 
 {% block content %}
+<h1>{% bootstrap_icon 'trash' %} Excluir</h1>
 <form action="" method="post">
   {% csrf_token %}
-  <p>Você tem certeza que deseja excluir "{{ object.nome }}"?</p>
+  <p>Você tem certeza que deseja excluir "{{ object.username }}"?</p>
   {% buttons submit='Confirmar' %}
     {% bootstrap_button content='Cancelar' href="javascript:history.go(-1);" button_type='link' button_class='btn btn-default' size='md' %}
   {% endbuttons %}
