--- a/lucro/templates/lucro/lucro_list.html
+++ b/lucro/templates/lucro/lucro_list.html
@@ -14,7 +14,7 @@
 				<a href="{% url 'lucro_create' %}" class="btn btn-md btn-primary">{% bootstrap_icon 'floppy-disk' %} Cadastrar Lucros</a>
 			  </div>
 	      <div class="col-sm-6 text-right">
-	        <span class="badge" style="background-color: #0275d8; color: white;">
+	        <span class="badge" style="background-color:rgb(53, 201, 85); color: white;">
 	          <strong>Total de Lucros:</strong> R$ {{ total|floatformat:2 }}
 	        </span>
 	      </div>
