--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,11 +1,11 @@
 {% extends 'core/base.html' %}
 {% load bootstrap3 %}
 
-{% block title %}💸FinancialDisplay - Seu sistema de gerenciamento financeiro{% endblock %}
+{% block title %}💸FinanceG - Seu sistema de gerenciamento financeiro{% endblock %}
 
 {% block content %}
     <div class="text-center mb-5">
-        <h2 class="mb-3 text-primary">Bem-vindo ao 💸FinancialDisplay</h2>
+        <h2 class="mb-3 text-primary">Bem-vindo ao 💸FinanceG</h2>
         <h5 class="text-muted">Seu sistema de gerenciamento financeiro</h5>
         <p class="text-muted">Simplifique suas finanças, acompanhe suas receitas e despesas, e tome decisões mais inteligentes.</p>
     </div>
