--- a/categoria/templates/categoria/lucros_por_categoria.html
+++ b/categoria/templates/categoria/lucros_por_categoria.html
@@ -31,7 +31,7 @@
           </tr>
           {% empty %}
           <tr>
-              <td colspan="7" class="text-center">Nenhuma despesa registrada.</td>
+              <td colspan="7" class="text-center">Nenhum lucro registrado.</td>
           </tr>
       {% endfor %}
     </tbody>
