--- a/lancamento/templates/lancamento/lancamento_list.html
+++ b/lancamento/templates/lancamento/lancamento_list.html
@@ -7,6 +7,23 @@
 
 {% block content %}
 <h1>{% bootstrap_icon 'glyphicon glyphicon-usd' %} Despesas</h1>
+<div style="text-align: right; margin-bottom: 15px;">
+    <form method="GET" class="form-inline">
+        <div class="input-group">
+            <input type="text" name="q" class="form-control" placeholder="Buscar despesa..." value="{{ request.GET.q }}">
+            <span class="input-group-btn">
+                <button type="submit" class="btn btn-primary">
+                    {% bootstrap_icon 'search' %} Buscar
+                </button>
+				{% if request.GET.q %}
+                <a href="{% url 'lancamento_list' %}" class="btn btn-secondary">
+                    {% bootstrap_icon 'remove' %} Limpar
+                </a>
+                {% endif %}
+            </span>
+        </div>
+    </form>
+</div>
 	<div class="panel panel-default">
 	  <div class="panel-body">
 	    <div class="row">
@@ -48,4 +65,48 @@
 			{% endfor %}
   		</tbody>
 	</table>
+	<!--<div style="text-align: right; margin-bottom: 15px;"><-->
+		<nav aria-label="Paginação">
+			<ul class="pagination justify-content-center">
+				{% if page_obj.paginator.num_pages > 1 %}
+				{% if page_obj.has_previous %}
+					<li class="page-item">
+						<a class="page-link" href="?q={{ request.GET.q }}&page=1" aria-label="Primeira">
+							<span aria-hidden="true">&laquo;&laquo;</span>
+						</a>
+					</li>
+					<li class="page-item">
+						<a class="page-link" href="?q={{ request.GET.q }}&page={{ page_obj.previous_page_number }}" aria-label="Anterior">
+							<span aria-hidden="true">&laquo;</span>
+						</a>
+					</li>
+				{% endif %}
+	
+				{% for num in page_obj.paginator.page_range %}
+					{% if page_obj.number == num %}
+						<li class="page-item active" aria-current="page">
+							<span class="page-link">{{ num }} <span class="sr-only">(atual)</span></span>
+						</li>
+					{% else %}
+						<li class="page-item">
+							<a class="page-link" href="?q={{ request.GET.q }}&page={{ num }}">{{ num }}</a>
+						</li>
+					{% endif %}
+				{% endfor %}
+	
+				{% if page_obj.has_next %}
+					<li class="page-item">
+						<a class="page-link" href="?q={{ request.GET.q }}&page={{ page_obj.next_page_number }}" aria-label="Próxima">
+							<span aria-hidden="true">&raquo;</span>
+						</a>
+					</li>
+					<li class="page-item">
+						<a class="page-link" href="?q={{ request.GET.q }}&page={{ page_obj.paginator.num_pages }}" aria-label="Última">
+							<span aria-hidden="true">&raquo;&raquo;</span>
+						</a>
+					</li>
+				{% endif %}
+			{% endif %}
+		</ul>
+	<!--</nav>-->
 {% endblock %}
