--- a/categoria/templates/categoria/categoria_form.html
+++ b/categoria/templates/categoria/categoria_form.html
@@ -13,7 +13,10 @@ Cadastro de categoria
 <form class="form" role="form" method="POST">
   {% csrf_token %}
   {{ form.non_field_errors }}
-  {% bootstrap_form form %}
+  {% bootstrap_field form.descricao %}
+  <div style="pointer-events: none;">
+  {% bootstrap_field form.usuario %}
+</div>
   {% buttons submit='Salvar' %}
     <a href="javascript:history.go(-1);" class="btn btn-info" role="button">Voltar</a>
   {% endbuttons %}
